--- a/source/sass/colors.scss
+++ b/source/sass/colors.scss
@@ -1,4 +1,7 @@
 $dark-blue: #192b3f;
+$blue: #3d5876;
 $grey: #8a94a6;
+$light-grey: #c5c4c2;
+$lighter-grey: #e1e6ed;
 $white: #ffffff;
 $light-brown: #c9b8a8;
