--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,4 +1,5 @@
 .slider__content {
+  @include container;
   color: $white;
   background-color: $light-brown;
 }
@@ -12,7 +13,5 @@
 
 .slider__description {
   margin: 0;
-  font-size: 16px;
-  line-height: 24px;
   opacity: 0.8;
 }
