--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -3,7 +3,7 @@
 }
 
 .card__title {
-  margin: 0;
+  margin: 16px 0 0 0;
   font-size: 32px;
   font-weight: inherit;
   line-height: 32px;
@@ -11,7 +11,7 @@
 }
 
 .card__text {
-  margin: 0;
+  margin: 16px 4px 16px 0;
   font-size: 18px;
   line-height: 28px;
 }
