--- a/source/sass/blocks/characteristics.scss
+++ b/source/sass/blocks/characteristics.scss
@@ -8,3 +8,10 @@
   padding: 0;
   border: 0;
 }
+
+.characteristics__block {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 32px;
+  margin-bottom: 16px;
+}
