--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -1,7 +1,13 @@
+.details {
+  margin-top: 28px;
+}
+
 .details__text {
+  margin: 8px 0;
   color: $dark_blue;
 }
 
 .details__information {
+  margin: 0;
   line-height: 20px;
 }
