--- a/source/sass/blocks/collections.scss
+++ b/source/sass/blocks/collections.scss
@@ -4,11 +4,33 @@
 
 .collections__list {
   @include reset-list;
+  margin-top: 8px;
 }
 
 .collections__item {
+  min-height: 160px;
+  display: flex;
+  align-items: flex-end;
   color: $white;
   background-color: $light-grey;
+  background-repeat: no-repeat;
+  border-radius: 4px;
+
+  &--first {
+    background-image: url("../img/collection-1.jpg");
+  }
+
+  &--second {
+    background-image: url("../img/collection-2.jpg");
+  }
+}
+
+.collections__item + .collections__item {
+  margin-top: 16px;
+}
+
+.collections__item-inner {
+  padding: 12px 16px;
 }
 
 .collections__title {
