--- a/source/sass/blocks/spoiler.scss
+++ b/source/sass/blocks/spoiler.scss
@@ -1,10 +1,36 @@
 .spoiler__button {
-  width: 100%;
+  position: relative;
   display: block;
+  width: 100%;
+  padding-top: 8px;
+  padding-bottom: 8px;
   font-size: inherit;
   font-weight: inherit;
   line-height: 32px;
   text-align: left;
   color: $dark-blue;
   border-bottom: 1px solid $lighter-grey;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: $dark_blue;
+  }
+
+  &::before {
+    width: 10px;
+    height: 1.5px;
+    right: 0;
+  }
+
+  &::after {
+    width: 1.5px;
+    height: 10px;
+    right: 4px;
+    transition: transform 0.35s ease-out;
+  }
 }
