--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
+@import "node_modules/swiper/swiper-bundle";
 @import "modern-normalize/modern-normalize";
 @import "variables";
 @import "mixins";
@@ -6,6 +7,7 @@
 @import "visually-hidden";
 @import "global";
 @import "blocks/slider";
+@import "blocks/logo";
 @import "blocks/subtitle";
 @import "blocks/product";
 @import "blocks/card";
