--- a/source/sass/blocks/characteristics.scss
+++ b/source/sass/blocks/characteristics.scss
@@ -3,6 +3,14 @@
   border-bottom: 1px solid $lighter-grey;
 }
 
+@media (min-width: $width-tablet) {
+  .characteristics__fieldset-wrapper {
+    display: grid;
+    grid-template-columns: max-content auto;
+    grid-column-gap: 72px;
+  }
+}
+
 .characteristics__fieldset {
   margin: 0;
   padding: 0;
@@ -14,4 +22,12 @@
   flex-wrap: wrap;
   margin-top: 32px;
   margin-bottom: 16px;
+}
+
+@media (min-width: $width-tablet) {
+  .characteristics__block {
+    display: grid;
+    grid-template-columns: 152px auto;
+    grid-column-gap: 72px;
+  }
 }
