--- a/source/sass/blocks/spoiler.scss
+++ b/source/sass/blocks/spoiler.scss
@@ -1,10 +1,14 @@
+.spoiler + .spoiler {
+  margin-top: 8px;
+}
+
 .spoiler__button {
   position: relative;
   display: block;
   width: 100%;
   padding-top: 8px;
   padding-bottom: 8px;
-  font-size: inherit;
+  font-size: 24px;
   font-weight: inherit;
   line-height: 32px;
   text-align: left;
@@ -33,4 +37,23 @@
     right: 4px;
     transition: transform 0.35s ease-out;
   }
+}
+
+.no-js .spoiler__button::after,
+.spoiler--open .spoiler__button::after {
+  transform: rotate(90deg);
+}
+
+.spoiler__content {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+}
+
+.no-js .spoiler__content {
+  height: auto;
+}
+
+.spoiler--open .spoiler__content {
+  height: auto;
 }
