--- a/source/sass/colors.scss
+++ b/source/sass/colors.scss
@@ -3,5 +3,6 @@ $blue: #3d5876;
 $grey: #8a94a6;
 $light-grey: #c5c4c2;
 $lighter-grey: #e1e6ed;
+$pale-grey: rgba($lighter-grey, 0.2);
 $white: #ffffff;
 $light-brown: #c9b8a8;
