--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "colors";
 @import "visually-hidden";
 @import "global";
+@import "blocks/page";
 @import "blocks/slider";
 @import "blocks/logo";
 @import "blocks/subtitle";
