--- a/source/sass/blocks/collections.scss
+++ b/source/sass/blocks/collections.scss
@@ -8,7 +8,16 @@
   margin-top: 8px;
 }
 
+@media (min-width: $width-desktop) {
+  .collections__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 24px;
+  }
+}
+
 .collections__item {
+  //position: relative;
   min-height: 160px;
   display: flex;
   align-items: flex-end;
@@ -24,6 +33,15 @@
   &--second {
     background-image: url("../img/collection-2.jpg");
   }
+
+  /*&::before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.22) 0%, rgba(53, 41, 37, 0.22) 100%);
+  }*/
 }
 
 @media (min-width: $width-tablet) {
@@ -40,8 +58,28 @@
   }
 }
 
+@media (min-width: $width-desktop) {
+  .collections__item {
+    min-height: 160px;
+
+    &--first {
+      background-image: url("../img/collection-1-desktop.jpg");
+    }
+
+    &--second {
+      background-image: url("../img/collection-2-desktop.jpg");
+    }
+  }
+}
+
 .collections__item + .collections__item {
   margin-top: 16px;
+}
+
+@media (min-width: $width-desktop) {
+  .collections__item + .collections__item {
+    margin-top: 0;
+  }
 }
 
 .collections__item-inner {
@@ -61,6 +99,12 @@
   }
 }
 
+@media (min-width: $width-desktop) {
+  .collections__title {
+    font-size: 24px;
+  }
+}
+
 .collections__text {
   margin: 0;
   font-size: 14px;
@@ -73,5 +117,12 @@
   .collections__text {
     font-size: 18px;
     line-height: 1;
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .collections__text {
+    font-size: 14px;
+    line-height: 16px;
   }
 }
