--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -8,6 +8,12 @@
   }
 }
 
+@media (min-width: $width-desktop) {
+  .details {
+    margin-top: 24px;
+  }
+}
+
 .details__text {
   margin: 8px 0;
   color: $dark_blue;
