--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,4 +1,5 @@
 .slider__slide {
+  position: relative;
   background-repeat: no-repeat;
   background-color: $light-brown;
   background-position: center;
@@ -14,6 +15,15 @@
 
   &--third {
     background-image: url("../img/slider-img3.jpg");
+  }
+
+  &::before {
+    content: "";
+    //position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    //background: linear-gradient(180deg, rgba(255, 255, 255, 0.22) 0%, rgba(53, 41, 37, 0.5) 100%);
   }
 }
 
@@ -31,8 +41,15 @@
   height: 100%;
   min-height: 600px;
   padding-top: 24px;
-  padding-bottom: 27px;
+  padding-bottom: 91px;
   color: $white;
+}
+
+@media (min-width: $width-desktop) {
+  .slider__content {
+    min-height: 768px;
+    min-width: 600px;
+  }
 }
 
 .slider__title {
@@ -58,4 +75,16 @@
     font-size: 24px;
     line-height: 32px;
   }
+}
+
+.slider__pagination {
+  position: absolute;
+  z-index: 1;
+  width: auto;
+  left: auto;
+  bottom: 30px;
+  right: 74px;
+  font-size: 20px;
+  line-height: 32px;
+  color: $white;
 }
