--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -2,26 +2,26 @@
   font-family: "Rajdhani";
   font-weight: 400;
   font-style: normal;
-  src: url("../fonts/rajdhani-regular.woff2") format("woff2")
+  src: url("../fonts/rajdhani-regular.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Rajdhani";
   font-weight: 500;
   font-style: normal;
-  src: url("../fonts/rajdhani-medium.woff2") format("woff2")
+  src: url("../fonts/rajdhani-medium.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Rajdhani";
   font-weight: 600;
   font-style: normal;
-  src: url("../fonts/rajdhani-semibold.woff2") format("woff2")
+  src: url("../fonts/rajdhani-semibold.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Rajdhani";
   font-weight: 700;
   font-style: normal;
-  src: url("../fonts/rajdhani-bold.woff2") format("woff2")
+  src: url("../fonts/rajdhani-bold.woff2") format("woff2");
 }
