--- a/source/sass/blocks/agreement.scss
+++ b/source/sass/blocks/agreement.scss
@@ -19,12 +19,14 @@
 }
 
 .agreement__checkbox-icon-wrapper {
+  @include animation;
   position: relative;
   display: block;
   width: 20px;
   height: 20px;
+  background-color: transparent;
+  border: 1px solid $lighter-grey;
   color: $white;
-  background-color: $dark-blue;
 
   &:hover {
     color: $lighter-grey;
@@ -36,23 +38,27 @@
 
 .agreement__checkbox-icon-checked {
   position: absolute;
-  display: none;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   color: currentColor;
   margin: auto;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .agreement__label-checkbox input:checked + .agreement__checkbox-icon-wrapper .agreement__checkbox-icon-checked {
-  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 
-.agreement__label-checkbox input:disabled + .agreement__checkbox-icon-wrapper {
-  color: transparent;
+.agreement__label-checkbox input:checked + .agreement__checkbox-icon-wrapper {
+  background-color: $dark-blue;
+}
+
+.agreement__label-checkbox input:checked:hover + .agreement__checkbox-icon-wrapper {
   background-color: transparent;
-  border: 1px solid $lighter-grey;
 }
 
 .agreement__button {
