--- a/source/sass/blocks/collections.scss
+++ b/source/sass/blocks/collections.scss
@@ -1,5 +1,4 @@
 .collections {
-  @include container;
   margin-top: 40px;
 }
 
@@ -17,13 +16,14 @@
 }
 
 .collections__item {
-  //position: relative;
+  position: relative;
   min-height: 160px;
   display: flex;
   align-items: flex-end;
   color: $white;
   background-color: $light-grey;
   background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 4px;
 
   &--first {
@@ -34,14 +34,17 @@
     background-image: url("../img/collection-2.jpg");
   }
 
-  /*&::before {
+  &::before {
     position: absolute;
     content: "";
     display: block;
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.22) 0%, rgba(53, 41, 37, 0.22) 100%);
-  }*/
+    mix-blend-mode: multiply;
+  }
 }
 
 @media (min-width: $width-tablet) {
@@ -83,6 +86,7 @@
 }
 
 .collections__item-inner {
+  z-index: 1;
   padding: 12px 16px;
 }
 
