--- a/source/sass/blocks/quantity.scss
+++ b/source/sass/blocks/quantity.scss
@@ -59,14 +59,11 @@
   border: 0;
   color: inherit;
   text-align: center;
+  appearance: textfield;
 }
 
 .quantity__input::-webkit-outer-spin-button,
 .quantity__input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  appearance: none;
   margin: 0;
-}
-
-.quantity__input {
-  -moz-appearance: textfield;
 }
