--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -19,11 +19,14 @@
 
   &::before {
     content: "";
-    //position: absolute;
+    position: absolute;
     display: block;
     width: 100%;
-    height: 100%;
-    //background: linear-gradient(180deg, rgba(255, 255, 255, 0.22) 0%, rgba(53, 41, 37, 0.5) 100%);
+    height: 193px;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.22) 0%, rgba(53, 41, 37, 0.5) 100%);
+    mix-blend-mode: multiply;
   }
 }
 
@@ -50,6 +53,10 @@
     min-height: 768px;
     min-width: 600px;
   }
+}
+
+.slider__information {
+  z-index: 1;
 }
 
 .slider__title {
@@ -79,6 +86,8 @@
 
 .slider__pagination {
   position: absolute;
+  display: inline-flex;
+  align-items: center;
   z-index: 1;
   width: auto;
   left: auto;
@@ -87,4 +96,79 @@
   font-size: 20px;
   line-height: 32px;
   color: $white;
+}
+
+@media (min-width: $width-tablet) {
+  .slider__pagination {
+    right: auto;
+    left: 176px;
+  }
+}
+
+@media (min-width: $width-tablet) {
+  .slider__pagination {
+    left: 212px;
+    bottom: 32px;
+  }
+}
+
+.slider__pagination-total {
+  opacity: 0.5;
+}
+
+.slider__divider {
+  display: block;
+  height: 1px;
+  width: 16px;
+  margin-left: 8px;
+  margin-right: 8px;
+  background-color: $white;
+}
+
+.slider__button {
+  position: absolute;
+  z-index: 1;
+  bottom: 23px;
+  left: 12px;
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  color: $white;
+  border-radius: 50%;
+  cursor: pointer;
+
+  &--next {
+    left: 64px;
+  }
+
+  &:hover {
+    border: 1px solid $white;
+  }
+
+  &:active {
+    color: $grey;
+    background-color: $white;
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .slider__button {
+    bottom: 28px;
+    left: 48px;
+
+    &--next {
+      left: 96px;
+    }
+  }
+}
+
+.slider__button svg {
+  display: block;
+  color: currentColor;
+}
+
+.slider__button--next svg {
+  transform: rotate(180deg);
 }
